nav fixed. needed to wrap navigate() calls in their own function

--- a/pawsome-walks/src/styles/index.css
+++ b/pawsome-walks/src/styles/index.css
@@ -155,6 +155,19 @@ footer.light {
 
 /* SIGN UP PAGE */
 
+.signupContainer.dark {
+  background-color: #3e57e65e;
+
+  color: white;
+}
+
+.signupContainer.light {
+  background-color: #fff;
+  color: black;
+}
+
+/* OVERLAY STYLINGS */
+
 .overlay.dark {
   background-color: #343a40;
 
@@ -169,8 +182,6 @@ footer.light {
 .toggleOverlayButton.dark {
   color: #fff;
 }
-
-/* OVERLAY STYLINGS */
 .overlay {
   position: fixed;
   top: 0;
